--- a/pennappsweb/package.json
+++ b/pennappsweb/package.json
@@ -1,15 +1,19 @@
 {
+  "homepage": "https://sim1029.github.io/pennapps-2023/",
   "name": "pennappsweb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,7 +26,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.29",
+    "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
