--- a/pennappsweb/package.json
+++ b/pennappsweb/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sim1029.github.io/pennapps-2023/",
+  "homepage": "https://pennappsdreamteam.github.io/hire-me-pls/",
   "name": "pennappsweb",
   "private": true,
   "version": "0.0.0",
