--- a/pennappsweb/package.json
+++ b/pennappsweb/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pennappsdreamteam.github.io/hire-me-pls/",
+  "homepage": "https://hilarious-alpaca-a0636d.netlify.app",
   "name": "pennappsweb",
   "private": true,
   "version": "0.0.0",
