--- a/pennappsweb/package.json
+++ b/pennappsweb/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hiremepls.us/",
+  "homepage": "http://hiremepls.us/",
   "name": "pennappsweb",
   "private": true,
   "version": "0.0.0",
